<resources>
    <string name="app_name">AptekaApp</string>
    <string name="login_button">Logowanie</string>
    <string name="register_button">Rejestracja</string>
    <string name="state_button">Regulamin</string>
    <string name="delivery_button">Dostawa</string>
    <string name="about_us_button">O nas</string>
    <string name="account_create_label">Tworzenie konta</string>
    <string name="lub">LUB</string>
    <string name="password">Hasło</string>
    <string name="e_mail">E-mail</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="potwierd_has_o">Potwierdź hasło</string>
    <string name="createAccount">Utwórz konto</string>
    <string name="confirmPassword">Potwierdź hasło</string>
    <string name="title_activity_informations">Informations</string>
    <string name="state">Regulamin</string>
    <string name="delivery">Dostawa</string>
    <string name="aboutUs">O nas</string>
    <string name="faq">FAQ</string>
    <string name="logout">Wyloguj</string>
    <string name="stateLabel">REGULAMIN</string>
    <string name="mainTextState">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sem eros, ornare et orci a, tincidunt aliquet sapien. Proin pellentesque gravida elit, nec faucibus leo ultrices a. Aenean efficitur accumsan nisl sed venenatis. Nam dapibus nulla pharetra felis tempus, quis placerat odio mattis. Aliquam tristique enim tortor, ullamcorper rhoncus arcu efficitur vel. Praesent vel congue elit, non hendrerit odio. Donec viverra libero eget tellus sollicitudin, sodales ornare enim tincidunt. Sed finibus cursus leo sed vulputate. Aenean blandit laoreet fringilla. Integer efficitur tortor eget mauris dignissim, at finibus leo gravida. Nulla at dapibus neque. Phasellus scelerisque turpis et mollis eleifend. Etiam in finibus lorem, molestie blandit tortor. In sed augue mattis, convallis erat non, convallis enim. Donec quis velit rhoncus, rutrum enim in, elementum erat. Etiam dapibus turpis molestie ligula porta rhoncus. Aenean varius blandit feugiat. Praesent semper lacus at libero efficitur, eu posuere ante facilisis. Ut et ante gravida, ultricies enim nec, consectetur metus. Proin aliquam sem erat, nec pellentesque libero posuere ut. Vestibulum commodo libero sit amet odio eleifend, ac facilisis tellus scelerisque. Etiam volutpat efficitur vestibulum. Suspendisse id malesuada tortor. Nunc mattis quam sit amet suscipit luctus. Nulla ut lorem porta, porta eros sit amet, interdum nulla. Donec tincidunt orci sit amet quam euismod molestie. Integer in tincidunt lacus, sit amet pellentesque justo. Praesent a tristique elit, facilisis semper nisi. Suspendisse sit amet eleifend sapien. Ut laoreet ex ut gravida blandit. Pellentesque auctor metus vel ex suscipit, ut consequat mi aliquam. Ut faucibus mi sit amet massa convallis, id suscipit augue pulvinar.</string>
    <string name="SaveChanges">Zapisz zmiany</string>
    <string name="shipmentData">Dane do wysyłki</string>
    <string name="empty_cart">Twoj koszyk jest pusty</string>
    <string name="Searching">Twój koszyk jest pusty.</string>
    <string name="Regulamin">Korzystając z aplikacji Apteki Internetowej klient zobowiązuje się do: • Przestrzegania Regulaminu, Zasad zwrotów i reklamacji oraz zasad prawa odstąpienia oraz powszechnie obowiązującego prawa; • korzystania z Apteki Internetowej w sposób zgodny ogólnie przyjętymi zasadami korzystania z sieci Internet (Netykieta); • podawania danych zgodnie z prawdą. 10. Korzystanie z aplikacji i usług jest dla Klientów nieodpłatne. 11. Jeżeli producenci produktów udzielają gwarancji, Klient wraz z produktami otrzymuje kartę gwarancyjną zawierającą zasady odpowiedzialności gwarancyjnej producenta.</string>
    <string name="Delivery">Odbiór osobisty w siedzibie apteki: Apteka Dyżurna 11 Listopada 21a 73-110 Stargard Wysyłka: - Poczta Polska Pocztex Kurier 48 - płatność z góry 11 zł, za pobraniem – 17 zł; - InPost kurier24 - płatność z góry 15 zł, za pobraniem 20 zł; - DPD kurier – tylko płatność z góry 20 zł; - UPS kurier – tylko płatność z góry 20 zł;</string>
    <string name="About_us">Witaj w naszej Aptece Internetowej, świeżej, pachnącej i całkiem nowej. Zaczniemy więc najpierw od przedstawienia, że dokonujesz zakupów w polskiej firmie bez obcego mienia. Zarejestrowanej w Stargardzie pod numerem dwadzieścia jeden I, choć siedzibą naszą nie jest Wiedeń, Postaramy się zawsze doradzać kulturalnie, fachowo, mądrze a ponad wszystko właściwie - naturalnie. Internet stał się siedliskiem cudownych kuracji, i choć trudno w nich szukać jakichkolwiek racji, z naszej strony polecamy zawsze źródła sprawdzone, których osoby prowadzące są przez swoich pacjentów chwalone.</string>
    <string name="purchase">Zamawiam</string>
    <string name="and">LUB</string>
    <string name="welcomeText">Zawsze gdy jesteś w potrzebie</string>
    <string name="login">Zaloguj</string>
    <string name="create_account">Utwórz konto</string>
    <string name="first_slide">Wybierz swoje produkty</string>
    <string name="second_slide">Szybka dostawa</string>
    <string name="third_slide">Najlepsza obsługa</string>
    <string name="description">BLABLABLA DO ZMIANY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_all">See All</string>
    <string name="category">Kategoria</string>
    <string name="new_products">Nowe produkty</string>
    <string name="provide">Polecamy</string>
    <string name="see_all_products">Zobacz wszystkie</string>
    <string name="popular_products">Popularne leki</string>
    <string name="provide2">Polecamy</string>
    <string name="category_name">Kategoria</string>
    <string name="new_product">Nowość</string>
    <string name="otrivin_10ml">Otrivin 10ml</string>
    <string name="cena_pln">Cena: </string>


</resources>