<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:paddingTop="50dp"
        android:layout_gravity="center" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/baseline_email_24"
        android:id="@+id/email"
        android:hint="@string/e_mail"
        android:layout_marginTop="80dp"
        android:inputType="textEmailAddress"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:drawableRight="@drawable/baseline_lock_24"
        android:hint="@string/password"
        android:layout_marginTop="50dp"
        android:inputType="textPassword"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginBtn"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/black"
        app:cornerRadius="0dp"/>
</LinearLayout>