<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    tools:context=".Register">

    <ImageView
        android:id="@+id/register_app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:alpha="0.7"
        android:src="@drawable/logo" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_app_logo"
        android:padding="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="80dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_below="@id/email"/>



    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register_confirm_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_below="@id/register_password_input"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_confirm_password_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="50dp"
        android:alpha="0.5"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textSize="20sp" />






</RelativeLayout>
