<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:alpha="0.7"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="97dp"
        android:text="@string/welcomeText"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold|italic" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registerBtn"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp"
        android:alpha="0.5"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="100dp"
        android:alpha="0.5"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:text="@string/register_button"
        android:textAllCaps="false"
        android:textSize="18sp" />


</RelativeLayout>